--- a/main_app/templates/drinks/detail.html
+++ b/main_app/templates/drinks/detail.html
@@ -21,7 +21,7 @@
   <input type="submit" class="btn" value="Upload Photo">
   <div class="card-action">
     {% for photo in drink.photo_set.all %}
-    <a href="{% url 'photo_delete' photo.id %}">Delete</a>
+    <a href="{% url 'photo_delete' photo.id %}" method="POST">Delete</a>
     {% endfor %}
   </div>
 </form>
