--- a/main_app/templates/main_app/category_list.html
+++ b/main_app/templates/main_app/category_list.html
@@ -2,15 +2,24 @@
 {% block content %}
 
 <h1>Category List</h1>
-
-{% for category in category_list %}
-<div class="col s12 m2">
-    <a href="{% url 'categories_detail' category.id %}">
+<div class="row">
+    <div class="col s6 col-offset-3">
+        {% for category in category_list %}
+        <div class="card">
             <div class="card-content">
-                <span class="card-title">{{ category.name }}</span>
+                <span class="card-title">{{ category }}</span>
+                <form action="{% url 'categories_detail' category.id %}">
+                    {% csrf_token %}
+                    <button type="submit">Category Details</button>
+                </form>
             </div>
-    </a>
+        {% for drink in category.drink_set.all %}
+        <p>{{ drink.drink_name }}</p>
+        {% empty %}
+        <h3>No Drinks have been added to this category yet</h3>
+        {% endfor %}
+        </div>
+        {% endfor %}
+    </div>
 </div>
-{% endfor %}
-
 {% endblock %}
