--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -18,7 +18,11 @@ img.logo {
   padding-top: 1vh;
 }
 
-.responsive-img {
+img.circle.responsive-img {
   width: 300px;
   height: 300px;
+}
+
+img.responsive-img {
+  width: 300vh;
 }
