updates css and drink list sorting

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -40,11 +40,16 @@
             <ul class="sidenav" id="mobile-demo">
                 <li><a href="{% url 'home' %}">Home</a></li>
                 <li><a href="{% url 'about' %}">About</a></li>
+                {% if user.is_authenticated %}
                 <li><a href="{% url 'survey_form' %}">Generate A New Cocktail</a></li>
                 <li><a href="{% url 'index' %}">Drink List</a></li>
                 <li><a href="{% url 'categories_index' %}">Cocktail Categories</a></li>
                 <li><a href="{% url 'categories_create' %}">Add Cocktail Category</a></li>
                 <li><a href="{% url 'logout' %}">Log Out</a></li>
+                {% else %}
+                <li><a href="{% url 'signup' %}">Sign Up</a></li>
+                <li><a href="{% url 'login' %}">Log In</a></li>
+                {% endif %}
               </ul>
               <script>
                 document.addEventListener('DOMContentLoaded', function() {
